--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bits-mongo",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Provides the logic for connecting bits to a mongo database",
   "main": "lib/index.js",
   "scripts": {
@@ -19,20 +19,21 @@
   },
   "homepage": "https://github.com/jgretz/node-bits-mongo#readme",
   "dependencies": {
-    "lodash": "^4.17.2",
-    "mongoose": "^4.7.2",
+    "lodash": "^4.17.3",
+    "mongoose": "^4.7.5",
+    "node-bits": "^0.0.11",
     "promise": "^7.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
-    "babel-core": "^6.18.2",
+    "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-module-resolver": "^2.2.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.18.0",
-    "eslint": "^3.1.1",
+    "eslint": "^3.12.2",
     "eslint-plugin-import": "^2.2.0",
     "nodemon": "^1.9.2",
     "shelljs": "^0.7.4"
