--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bits-mongo",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Provides the logic for connecting bits to a mongo database",
   "main": "lib/index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "lodash": "^4.17.3",
     "mongoose": "^4.7.5",
     "node-bits": "^0.0.11",
+    "node-bits-internal-database": "^0.0.1",
     "promise": "^7.1.1"
   },
   "devDependencies": {
